force-app/main/default/objects/custom_create386__c/custom_create386__c.object-meta.xml
<CustomObject>
    <label>Custom created object386</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects386</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>