force-app/main/default/objects/custom_create386__c/fields/custom_create_386field685__c.field-meta.xml
<CustomField>
    <fullName>custom_create_386field685__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 386field685</label>
    <type>Checkbox</type>
</CustomField>