force-app/main/default/objects/custom_create386__c/fields/custom_create_386field690__c.field-meta.xml
<CustomField>
    <fullName>custom_create_386field690__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 386field690</label>
    <type>Checkbox</type>
</CustomField>